[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build_meta"

[project]
name = "my-openenv-project"
version = "0.1.0"
description = "RL Environment for OpenEnv Hackathon"
dependencies = [
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0",
]

# This fixes the "Missing [project.scripts]" error
[project.scripts]
server = "main:app"
