[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build_meta"

[project]
name = "my-openenv-env"
version = "0.1.0"
description = "RL Environment for OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "openenv-core>=0.2.0",
]

# This is the line the grader is looking for
[project.scripts]
server = "main:app"

[tool.hatch.build.targets.wheel]
packages = ["."]
